--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
-
+    <string name="warning_title">Notification</string>
+    <string name="warning_text">You do not have permission to access this resource.</string>
+    <string name="okay">OK</string>
 </resources>
